src/objects/IGOM_Contact_Role_Detail__c.object
<CustomObject>
    <description>Manage  the relationship between Manual and Compliance Review with the Contact Role Detail.</description>
    <fields>
        <fullName>Account_Contact_Role__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Account Contact Role that the IGOM Contact Role Detail is related to.</description>
        <label>Account Contact Role</label>
        <referenceTo>Account_Contact_Role__c</referenceTo>
        <relationshipLabel>IGOM Contact Role Details</relationshipLabel>
        <relationshipName>IGOM_Contact_Role_Details</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Role_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account, with an IGOM role, that this Contact, also with the IGOM role, relates to.</description>
        <label>Account Role Detail</label>
        <referenceTo>IGOM_Account_Role_Detail__c</referenceTo>
        <relationshipLabel>IGOM Contact Role Details</relationshipLabel>
        <relationshipName>IGOM_Contact_Role_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Role associated to specific permissions, assigned to the user on the related station</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IGOM Admin</fullName>
                </value>
                <value>
                    <fullName>Editor</fullName>
                </value>
                <value>
                    <fullName>Acknowledger</fullName>
                </value>
                <value>
                    <fullName>Viewer</fullName>
                </value>
                <value>
                    <fullName>IATA Personnel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>IGOM Contact Role Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Contact_Role__c</columns>
        <columns>Account_Role_Detail__c</columns>
        <columns>Role__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IGCON-{0000000000}</displayFormat>
        <label>Contact Detail</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IGOM Contact Role Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>